--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,7 @@ background-size:cover ;
     overflow: auto;
     padding-bottom: 10px;
     margin-bottom: 10%;
+    margin-top: 10%;
 }
 .section2 .cont{
     width:80%;
