--- a/css/main.css
+++ b/css/main.css
@@ -89,8 +89,8 @@ background-size:cover ;
     margin-top: 10%;
 }
 .section2 .cont{
-    width:80%;
-    margin: auto;
+    width:90%;
+    margin-left: auto;
 }
 .section2 .div{
     width: 100%;
