--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,7 @@ background-size:cover ;
     position: relative;
     overflow: auto;
     padding-bottom: 10px;
-    margin-bottom: 10%;
+    /* margin-bottom: 10%; */
     margin-top: 10%;
 }
 .section2 .cont{
@@ -125,3 +125,121 @@ background-size:cover ;
     width: 80%;
     padding:10%;
 }
+/* end section2 */
+/* section3 */
+.section3{
+    position: relative;
+    margin-top: 10%;
+    padding-top:80px;
+    color: white;
+    width: 100%;
+    background-color: burlywood;
+    padding-bottom: 40px;
+}
+.section3 .cont1{
+    position: absolute;
+    top: -170px;
+    left: 30%;
+    background-color: white;
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.226);
+    display: flex;
+    width: 30%;
+    flex-wrap: wrap;
+    padding:50px 40px;
+    border-radius: 10px;
+}
+.section3 .cont1 h2{
+    margin: auto;
+    text-align: center;
+    text-transform: capitalize;
+    color: hsl(192, 100%, 9%);
+    width: 100%;
+    font-family: 'Poppins', sans-serif;
+    font-size: 30px;
+}
+.section3 .cont1 input{
+    margin: auto;
+    margin-top: 20px;
+    color: white;
+    background-color: hsl(322, 100%, 66%);
+    border-style: none;
+    right: 10px;
+    border-radius: 30px;
+    width: 50%;
+    height: 50px;
+    cursor: pointer;
+    font-family: 'Open Sans', sans-serif;
+    box-shadow: 0px 0px 6px 3px rgba(322, 100, 66, 0.226);
+}
+.section3 .container{
+    display: flex;
+}
+.contact{
+    width: 33.33%;
+}
+
+.section3 p{
+    margin-left: 30px;
+    padding-top: 20px;
+    position: relative;
+    width: 65%;
+    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
+}
+.location::before{
+    position: absolute;
+    left: -30px;
+    content: "\f3c5";
+    font-family: "Font Awesome 6 free";
+    font-weight: 900;
+    font-size: 16px;
+    padding-right: 10px;
+}
+.phone::before{
+    position: absolute;
+    left: -30px;
+    content: "\f2a0";
+    font-family: "Font Awesome 6 free";
+    font-weight: 900;
+    font-size: 16px;
+    padding-right: 10px;
+}
+.email::before{
+    position: absolute;
+    left: -30px;
+    content: "\f0e0";
+    font-family: "Font Awesome 6 free";
+    font-weight: 900;
+    font-size: 16px;
+    padding-right: 10px;
+}
+.section3 .list{
+    padding-top: 50px;
+    width:33.33%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.list li{
+    width: 35%;
+    font-family: 'Open Sans', sans-serif;
+    list-style-type: none;
+}
+.list a{
+    color: white;
+    text-decoration: none;
+}
+.section3 .cont{
+    width: 33.33%;
+    display: flex;
+    justify-content: flex-end;
+}
+.fa-brands{
+    margin-top: 80px;
+    margin-left: 20px;
+    width: 33.33%;
+    font-size: 25px;
+    color: white;
+}
+
+/* end section3 */
